# tg-dor

./: .gitignore  README.md
plano/: Makefile  proposta.bib  proposta.tex
src/: BUILD.bazel  README.md  WORKSPACE  debugger.cc  debugger.h  experiment.py  experiment_index.py  fingerprint_builder.cc  fingerprint_builder.h  his_solver.cc  his_solver.h  index_builder.cc  index_builder.h  main.cc  main_index.cc  main_matcher.cc  makefile  min_queue.h  ranker.cc  ranker.h  utils.cc  utils.h
