# Copyright 2018 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "index_builder",
    srcs = ["index_builder.cc"],
    hdrs = ["index_builder.h"],
    deps = [
        ":min_queue",
        ":ranker",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "fingerprint_builder",
    srcs = ["fingerprint_builder.cc"],
    hdrs = ["fingerprint_builder.h"],
    deps = [
        ":index_builder",
    ],
)

cc_library(
    name = "min_queue",
    srcs = ["min_queue.cc"],
    hdrs = ["min_queue.h"],
)

cc_library(
    name = "ranker",
    srcs = ["ranker.cc"],
    hdrs = ["ranker.h"],
)

cc_library(
    name = "his_solver",
    srcs = ["his_solver.cc"],
    hdrs = ["his_solver.h"],
)

cc_binary(
    name = "main_index",
    srcs = ["main_index.cc"],
    deps = [
        ":index_builder",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_binary(
    name = "main_matcher",
    srcs = ["main_matcher.cc"],
    deps = [
        ":fingerprint_builder",
        ":his_solver",
        ":index_builder",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)
